# langchain-test

./: .env.example  .gitignore  app.py  docker-compose.yml  pyproject.toml
backend/: model.py  summarize.py
